# test

./: .env.example  .flake8  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
config/: __init__.py  settings.py  urls.py  wsgi.py
tests/: __init__.py  conftest.py  test_api.py
