[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-test-project"
version = "0.1.0"
description = "A Django project following Python and Django best practices"
authors = [{name = "Oleksandr K", email = "oleksandr.kolodiazhnyi@k-data.llc"}]
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
    "djangorestframework>=3.14.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
    "django-cors-headers>=4.3.1",
    "python-decouple>=3.8",
]

[project.optional-dependencies]
dev = [
    "black>=24.1.1",
    "flake8>=7.0.0",
    "pylint>=3.0.3",
    "pytest>=7.4.4",
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "isort>=5.13.2",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing --ignore=venv"
testpaths = ["tests"]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
    "line-too-long",
    "unused-argument",
    "redefined-outer-name",
]

[tool.pylint.format]
max-line-length = 88
